--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Java Script Learning</title>
   </head>
   <body>
-    <script src="main.js"></script>
+    <script src='main.js'></script>
   </body>
 </html>
